# VERA

./: .env.template  .gitignore  ATTRIBUTIONS.md  LICENSE  NOTICE.txt  README.md  pyproject.toml
data/: README.md  download.txt
evaluation/grader/: __init__.py  asr_processor.py  base.py  llm_grader.py  llm_normalizer.py  prompts.py  run_grader.py  voice_grader.py  wer_calculator.py
evaluation/realtime/: batch_evaluate.py
evaluation/text/: batch_evaluate.py  run_evaluation.py
evaluation/voice/: batch_evaluate.py
models/: __init__.py
models/realtime/: __init__.py  freeze_omni.py  gemini.py  gpt_realtime.py  moshi.py  sonic.py
models/realtime/liveanswer/: audio.py  audio_to_answer.py  explain.py  main.py  mrcr_context.py  solver.py  stt_service.py  utils.py
models/shared/: __init__.py  base_adapter.py  timing_utils.py
models/text/: __init__.py  gemini25_flash.py  gemini25_pro.py  gpt4o.py  gpt5.py
models/voice/: __init__.py  af3.py  moshi.py  phi4.py  qwen25_omni  qwen25_omni.py  qwen2_audio.py  ultravox.py
test_voice_episodes/: test.json
tests/: README.md  __init__.py  test_models.py
utils/: __init__.py  web_search.py
